src/objects/Export_Service__c.object
<CustomObject>
    <fields>
        <fullName>Alternate_End_Date__c</fullName>
        <description>Alternate date external business user wants to end Service by.</description>
        <inlineHelpText>Alternate date external business user wants to end Service by.</inlineHelpText>
        <label>Alternate End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Alternate_Start_Date__c</fullName>
        <description>Alternate date external business user wants to start Service by.</description>
        <inlineHelpText>Alternate date external business user wants to start Service by.</inlineHelpText>
        <label>Alternate Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attachment_Id__c</fullName>
        <label>Attachment Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_Conference_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will move the IMC path forward from &apos;Prospecting&apos; to &apos;Participation Agreement Creation.&apos;</description>
        <inlineHelpText>This will move the IMC path forward from &apos;Prospecting&apos; to &apos;Participation Agreement Creation.&apos;</inlineHelpText>
        <label>Completed Conference Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmed_End_Date__c</fullName>
        <description>Confirmed end date entered by Foreign Post.</description>
        <inlineHelpText>Confirmed end date entered by Foreign Post.</inlineHelpText>
        <label>Confirmed End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confirmed_Start_Date__c</fullName>
        <description>Confirmed start date entered by Foreign Post.</description>
        <inlineHelpText>Confirmed start date entered by Foreign Post.</inlineHelpText>
        <label>Confirmed Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Report_Countdown__c</fullName>
        <description>Number of days until Final Report Due Date.</description>
        <formula>IF(
  OR(
    ISBLANK(Scheduled_Report_Start_Date__c),
    TODAY() &lt; Scheduled_Report_Start_Date__c
  ),
  NULL,
  Final_Report_Due_Date__c - TODAY()
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Report Countdown</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Report_Due_Date__c</fullName>
        <description>Calculated from using fields from related Participation Agreement: &quot;Scheduled Report Start Date&quot; added to &quot;# of Business Days to Complete Final Report.&quot;</description>
        <label>Final Report Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IMC_Path__c</fullName>
        <description>The stages of the IMC Path.</description>
        <inlineHelpText>The stages of the IMC Path.</inlineHelpText>
        <label>IMC Path</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prospecting</fullName>
                    <default>true</default>
                    <label>Prospecting</label>
                </value>
                <value>
                    <fullName>Participation Agreement Creation</fullName>
                </value>
                <value>
                    <fullName>Service Scheduled and on Hold</fullName>
                </value>
                <value>
                    <fullName>Working on Report</fullName>
                </value>
                <value>
                    <fullName>Service Survey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Link_to_Survey_Result__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Link to Survey Result</label>
        <referenceTo>Export_Service__c</referenceTo>
        <relationshipLabel>Export Services</relationshipLabel>
        <relationshipName>Export_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketing_Materials_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Materials Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mid_Term_Report_Countdown__c</fullName>
        <description>Number of days until MId-Term Report Due Date</description>
        <formula>IF(
  ISBLANK(Mid_Term_Report_Due_Date__c),
  NULL,
  Mid_Term_Report_Due_Date__c - TODAY()
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mid-Term Report Countdown</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mid_Term_Report_Due_Date__c</fullName>
        <description>Calculated from using fields from related Participation Agreement: &quot;Scheduled Report Start Date&quot; added to &quot;# of Business Days to Complete Mid-Term Report&quot;</description>
        <label>Mid-Term Report Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mid_Term_Report__c</fullName>
        <label>PA Before Payment Report</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Export Service order.</description>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Export Services</relationshipLabel>
        <relationshipName>Export_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Export Service organization.</description>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Export Services</relationshipLabel>
        <relationshipName>Export_Services</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PA_After_Payment_ID__c</fullName>
        <label>PA After Payment ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PA_After_Payment_Report__c</fullName>
        <label>PA After Payment Report</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PA_Before_Payment_ID__c</fullName>
        <label>PA Before Payment ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PA_Sent_for_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When the related participation agreement is internally completed it is sent to the business client for payment and confirmation.</description>
        <label>PA Sent for Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Participation_Agreement__c</fullName>
        <description>Related Participation Agreement record Id.</description>
        <label>Participation Agreement</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When the related participation agreement payment has been confirmed.</description>
        <label>Payment Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Link__c</fullName>
        <description>The public order payment link.</description>
        <label>Payment Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Export Service client contact.</description>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Export Services</relationshipLabel>
        <relationshipName>Export_Services</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <description>Used in Services email templates to refer to the name of the product/service.</description>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_End_Date__c</fullName>
        <description>Date external business user wants to end Service by.</description>
        <inlineHelpText>Date external business user wants to end Service by.</inlineHelpText>
        <label>Requested End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_Start_Date__c</fullName>
        <description>Date external business user wants to start Service by.</description>
        <inlineHelpText>Date external business user wants to start Service by.</inlineHelpText>
        <label>Requested Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scheduled_Report_Start_Date__c</fullName>
        <description>Scheduled report start date.</description>
        <label>Scheduled Report Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scheduled_Start_Date__c</fullName>
        <description>Scheduled start date.</description>
        <label>Scheduled Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Cancellation_Date__c</fullName>
        <description>Service Cancellation Date.</description>
        <label>Service Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Completion_Date__c</fullName>
        <description>Service Completion Date.</description>
        <label>Service Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Size_of_Business__c</fullName>
        <label>Size of Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Size_of_Business</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Completed__c</fullName>
        <description>Survey Completed Date.</description>
        <label>Survey Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey_Follow_Up_Sent__c</fullName>
        <description>Survey Follow Up Sent Date.</description>
        <label>Survey Follow Up Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey_Sent__c</fullName>
        <description>Survey Sent Date.</description>
        <label>Survey Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>link_to_organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>link to organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Export Services (link to organization)</relationshipLabel>
        <relationshipName>Export_Services1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Export Service</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ES-{00000}</displayFormat>
        <label>Export Service Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Export Services</pluralLabel>
    <recordTypes>
        <fullName>Initial_Market_Check</fullName>
        <active>true</active>
        <description>Record type for the Initial Market Check Service.</description>
        <label>Initial Market Check</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Primary_Contact_Org_Matches_Org</fullName>
        <active>true</active>
        <description>The Primary Contact&apos;s Organization must match the selected Organization</description>
        <errorConditionFormula>Primary_Contact__r.AccountId   &lt;&gt;   Organization__c</errorConditionFormula>
        <errorMessage>The Primary Contact&apos;s Organization must match the selected Organization</errorMessage>
    </validationRules>
</CustomObject>